fixed chips resizing  on grid resize with   align-self: flex-start; src: https://stackoverflow.com/questions/27575779/pre vent-a-flex-items-height-from-expanding-to-match-other-flex-items

--- a/src/css/searchSection.module.css
+++ b/src/css/searchSection.module.css
@@ -56,6 +56,8 @@
   flex-wrap: wrap;
   max-width: 428px;
   padding: 3px;
+  /* This fixed chips resizing on grid resize */
+  align-self: flex-start;
 }
 .main_container {
   display: grid;
